--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bookshelf</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
-    <include src="./partials/example.html"></include>
-    <script type="module" src="./index.js"></script>
+    <header><include src="./partials/header.html"></include></header>
+
+    <div class="container">
+      <aside>
+        <include src="./partials/aside-categories.html"></include>
+        <include src="./partials/aside-support-ukraine.html"></include>
+      </aside>
+      <main>
+        <section class="main-content">
+          <include src="./partials/main-page.html"></include>
+        </section>
+        <include src="./partials/modal-window.html"></include>
+      </main>
+    </div>
+
+    <include src="./partials/burger-menu.html"></include>
+
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
