--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -4,6 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shopping list</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/shopping-list.css" />
   </head>
-  <body></body>
+  <body>
+    <header><include src="./partials/header.html"></include></header>
+
+    <div class="container">
+      <aside class="aside">
+        <include src="./partials/aside-support-ukraine.html"></include>
+      </aside>
+      <main>
+        <div class="main-content shopping-list-container"></div>
+      </main>
+    </div>
+
+    <include src="./partials/burger-menu.html"></include>
+
+    <script type="module" src="./js/index.js"></script>
+  </body>
 </html>
