Add basic styles

--- a/src/index.html
+++ b/src/index.html
@@ -16,14 +16,12 @@
     <header><include src="./partials/header.html"></include></header>
 
     <div class="container">
-      <aside>
+      <aside class="aside-wrapper">
         <include src="./partials/aside-categories.html"></include>
         <include src="./partials/aside-support-ukraine.html"></include>
       </aside>
-      <main>
-        <section class="main-content">
-          <include src="./partials/main-page.html"></include>
-        </section>
+      <main class="main-content">
+        <include src="./partials/main-page.html"></include>
         <include src="./partials/modal-window.html"></include>
       </main>
     </div>
