--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -19,8 +19,8 @@
       <aside class="aside">
         <include src="./partials/aside-support-ukraine.html"></include>
       </aside>
-      <main>
-        <div class="main-content shopping-list-container"></div>
+      <main class="main-content">
+        <div class="shopping-list-container"></div>
       </main>
     </div>
 
