--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -26,6 +26,6 @@
 
     <include src="./partials/burger-menu.html"></include>
 
-    <script type="module" src="./js/index.js"></script>
+    <script type="module" src="./js/shopping-list.js"></script>
   </body>
 </html>
