Update see more button js

--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -19,9 +19,8 @@
       <aside class="aside">
         <include src="./partials/aside-support-ukraine.html"></include>
       </aside>
-      <main class="main-content">
+      <main class="main-content shopping-list-main-content">
         <include src="./partials/shopping-list-main.html"></include>
-        
       </main>
     </div>
 
