Add notiflix and tui-pagination

--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -21,6 +21,7 @@
       </aside>
       <main class="main-content shopping-list-main-content">
         <include src="./partials/shopping-list-main.html"></include>
+        <include src="./partials/pagination.html"></include>
       </main>
     </div>
 
