--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
 
     <include src="./partials/modal-window.html"></include>
     <include src="./partials/burger-menu.html"></include>
+    <include src="./partials/autorization-window.html"></include>
 
     <script type="module" src="./js/index.js"></script>
   </body>
