--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -26,6 +26,7 @@
     </div>
 
     <include src="./partials/burger-menu.html"></include>
+    <include src="./partials/autorization-window.html"></include>
 
     <script type="module" src="./js/shopping-list.js"></script>
   </body>
