Add scroll-up and loader

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,8 @@
     <include src="./partials/modal-window.html"></include>
     <include src="./partials/burger-menu.html"></include>
     <include src="./partials/autorization-window.html"></include>
+    <include src="./partials/scroll-up.html"></include>
+    <div class="loader"></div>
 
     <script type="module" src="./js/index.js"></script>
   </body>
