--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -17,7 +17,9 @@
 
     <div class="container">
       <aside class="aside">
-        <include src="./partials/aside-support-ukraine.html"></include>
+        <div class="shopping-list-support-ukraine">
+          <include src="./partials/aside-support-ukraine.html"></include>
+        </div>
       </aside>
       <main class="main-content shopping-list-main-content">
         <include src="./partials/shopping-list-main.html"></include>
@@ -27,6 +29,8 @@
 
     <include src="./partials/burger-menu.html"></include>
     <include src="./partials/autorization-window.html"></include>
+    <include src="./partials/scroll-up.html"></include>
+    <div class="loader"></div>
 
     <script type="module" src="./js/shopping-list.js"></script>
   </body>
