--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
     <include src="./partials/autorization-window.html"></include>
     <include src="./partials/scroll-up.html"></include>
     <div class="loader"></div>
+    <div class="click-loader click-is-hidden"></div>
 
     <script type="module" src="./js/index.js"></script>
   </body>
